0_1_build-vpc.yaml
Description: >-
	  This template deploys a VPC with a single public and private subnet.
	  It deploys an Internet Gateway with a default  route on the public subnet.
	  It deploys a single NAT Gateways with a default routes in the private subnet.
	Parameters:
	  EnvironmentName:
	    Description: An environment name that will be prefixed to resource names
	    Default: build-vpc
	    Type: String
	  VpcCIDR:
	    Description: Please enter the IP range (CIDR notation) for this VPC
	    Type: String
	    Default: 10.0.0.0/16
	  PublicSubnet1CIDR:
	    Description: >-
	      Please enter the IP range (CIDR notation) for the public subnet in the
	      first Availability Zone
	    Type: String
	    Default: 10.0.10.0/24
	  PrivateSubnet1CIDR:
	    Description: >-
	      Please enter the IP range (CIDR notation) for the private subnet in the
	      first Availability Zone
	    Type: String
	    Default: 10.0.20.0/24
	Resources:
	  VPC:
	    Type: 'AWS::EC2::VPC'
	    Properties:
	      CidrBlock: !Ref VpcCIDR
	      EnableDnsSupport: true
	      EnableDnsHostnames: true
	      Tags:
	        - Key: Name
	          Value: !Ref EnvironmentName
	

	  InternetGateway:
	    Type: 'AWS::EC2::InternetGateway'
	    Properties:
	      Tags:
	        - Key: Name
	          Value: !Ref EnvironmentName
	

	  InternetGatewayAttachment:
	    Type: 'AWS::EC2::VPCGatewayAttachment'
	    Properties:
	      InternetGatewayId: !Ref InternetGateway
	      VpcId: !Ref VPC
	

	  PublicSubnet1:
	    Type: 'AWS::EC2::Subnet'
	    Properties:
	      VpcId: !Ref VPC
	      AvailabilityZone: !Select 
	        - 0
	        - !GetAZs ''
	      CidrBlock: !Ref PublicSubnet1CIDR
	      MapPublicIpOnLaunch: true
	      Tags:
	        - Key: Name
	          Value: !Sub '${EnvironmentName} Public Subnet (AZ1)'
	

	  PrivateSubnet1:
	    Type: 'AWS::EC2::Subnet'
	    Properties:
	      VpcId: !Ref VPC
	      AvailabilityZone: !Select 
	        - 0
	        - !GetAZs ''
	      CidrBlock: !Ref PrivateSubnet1CIDR
	      MapPublicIpOnLaunch: false
	      Tags:
	        - Key: Name
	          Value: !Sub '${EnvironmentName} Private Subnet (AZ1)'
	

	  NatGateway1EIP:
	    Type: 'AWS::EC2::EIP'
	    DependsOn: InternetGatewayAttachment
	    Properties:
	      Domain: vpc
	

	  NatGateway1:
	    Type: 'AWS::EC2::NatGateway'
	    Properties:
	      AllocationId: !GetAtt NatGateway1EIP.AllocationId
	      SubnetId: !Ref PublicSubnet1
	

	  PublicRouteTable:
	    Type: 'AWS::EC2::RouteTable'
	    Properties:
	      VpcId: !Ref VPC
	      Tags:
	        - Key: Name
	          Value: !Sub '${EnvironmentName} Public Routes'
	

	  DefaultPublicRoute:
	    Type: 'AWS::EC2::Route'
	    DependsOn: InternetGatewayAttachment
	    Properties:
	      RouteTableId: !Ref PublicRouteTable
	      DestinationCidrBlock: 0.0.0.0/0
	      GatewayId: !Ref InternetGateway
	

	  PublicSubnet1RouteTableAssociation:
	    Type: 'AWS::EC2::SubnetRouteTableAssociation'
	    Properties:
	      RouteTableId: !Ref PublicRouteTable
	      SubnetId: !Ref PublicSubnet1
	

	  PrivateRouteTable1:
	    Type: 'AWS::EC2::RouteTable'
	    Properties:
	      VpcId: !Ref VPC
	      Tags:
	        - Key: Name
	          Value: !Sub '${EnvironmentName} Private Routes (AZ1)'
	

	  DefaultPrivateRoute1:
	    Type: 'AWS::EC2::Route'
	    Properties:
	      RouteTableId: !Ref PrivateRouteTable1
	      DestinationCidrBlock: 0.0.0.0/0
	      NatGatewayId: !Ref NatGateway1
	

	  PrivateSubnet1RouteTableAssociation:
	    Type: 'AWS::EC2::SubnetRouteTableAssociation'
	    Properties:
	      RouteTableId: !Ref PrivateRouteTable1
	      SubnetId: !Ref PrivateSubnet1
	

	  NoIngressSecurityGroup:
	    Type: 'AWS::EC2::SecurityGroup'
	    Properties:
	      GroupName: no-ingress-sg
	      GroupDescription: Security group with no ingress rule
	      VpcId: !Ref VPC
	

	Outputs:
	  VPC:
	    Description: A reference to the created VPC
	    Value: !Ref VPC
	    Export:
	      Name: JupyterHub-Build-VPC
	  PublicSubnet1:
	    Description: A reference to the public subnet in the 1st Availability Zone
	    Value: !Ref PublicSubnet1
	    Export:
	      Name: JupyterHub-Build-Subnet-Public
	  PrivateSubnet1:
	    Description: A reference to the private subnet in the 1st Availability Zone
	    Value: !Ref PrivateSubnet1
	    Export:
	      Name: JupyterHub-Build-Subnet-Private
	  NoIngressSecurityGroup:
	    Description: Security group with no ingress rule
	    Value: !Ref NoIngressSecurityGroup
	    Export:
	      Name: JupyterHub-Build-SecurityGroup-NoIngress
